--- a/styles.css
+++ b/styles.css
@@ -4,7 +4,6 @@
   box-sizing: border-box;
   margin: 0;
   padding: 0;
-  background-color: #24252a;
 }
 
 li,
@@ -17,11 +16,12 @@ button {
   text-decoration: none;
 }
 
-header {
+div {
   display: flex;
   justify-content: space-between;
   align-items: center;
   padding: 30px 10%;
+  background-color: rgba(36, 37, 42, 1);
 }
 
 .logo {
@@ -59,5 +59,13 @@ button:hover {
   background-color: rgba(0, 136, 169, 0.8);
 }
 
-body {
+.hero {
+  background-color: rgba(36, 37, 42, 1);
+  display: grid;
+  justify-content: center;
+}
+
+.hero_img {
+  color: rgb(27, 27, 31);
+  box-shadow: 10px 10px 10px;
 }
